@@ -7,6 +7,7 @@ export(dml_xlsx)
 export(dsvg)
 export(dsvg_view)
 export(ph_with_vg)
+export(ph_with_vg_at)
 export(rvg_tracer_off)
 export(rvg_tracer_on)
 export(set_attr)
@@ -17,6 +18,7 @@ importFrom(gdtools,raster_view)
 importFrom(officer,body_add_xml)
 importFrom(officer,docx_reference_img)
 importFrom(officer,ph_from_xml)
+importFrom(officer,ph_from_xml_at)
 importFrom(officer,wml_link_images)
 importFrom(xml2,as_xml_document)
 importFrom(xml2,read_xml)
